--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         }
     ],
     "require": {
-        "php": "^7.1",
+        "php": "^8.0 || ^7.4 || ^7.3",
         "friendsofsymfony/elastica-bundle": "^6.3",
         "php-amqplib/rabbitmq-bundle": "^2.16.0"
     },
